# GhBounty

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
bounty_judge/: ruff.toml
bounty_judge/contracts/: bounty_judge.py
bounty_judge/scripts/: invoke_example.py
bounty_judge/tests/: test_bounty_judge.py
contracts/genlayer/: BountyJudge.py  pyproject.toml
contracts/solana/: Anchor.toml
frontend/: .env.example  middleware.ts  package.json  vitest.config.ts
frontend/app/: globals.css
frontend/components/: AppNav.tsx  BountyEditMenu.tsx  BountyRow.tsx  BulkBountyFlow.tsx  CreateBountyFlow.tsx  CreateBountyForm.tsx  DepositModal.tsx  NotificationsBell.tsx  PickWinnerModal.tsx  PrivyLoginButton.tsx  ProcessingSteps.tsx  RejectSubmissionModal.tsx  SubmissionsListModal.tsx  SubmitPRModal.tsx  WithdrawModal.tsx
frontend/lib/: auth-bypass.tsx  auth-context.ts  auth-privy.tsx  auth-supabase.tsx  auth.tsx  bounties.ts  data.ts  db.types.ts  notifications.ts  privy-bridge-core.ts  privy-supabase-bridge.ts  review-actions.ts  solana.ts  submissions.ts  types.ts
frontend/scripts/: smoke-create-bounty.ts
frontend/tests/: bounties.test.ts  privy-bridge-core.test.ts  privy-supabase-bridge.test.ts  solana.test.ts
relayer/: .env.example  package.json
relayer/drizzle/: 0001_app_identity.sql  0002_evaluation_report.sql
relayer/scripts/: score-pr.ts
relayer/src/: analyzer.ts  config.ts  index.ts  opus.ts  ranking.ts  submission-handler.ts  threshold.ts
relayer/src/db/: ops.ts  (+1 more)
scripts/: deploy-genlayer.sh  deploy-solana.sh
(+34 files in other folders)
