[project]
name = "ghbounty-genlayer"
version = "0.1.0"
description = "GenLayer intelligent contracts for Ghbounty"
requires-python = ">=3.11"
dependencies = [
    "genlayer-py>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["../../tests/genlayer"]
